2. SQT export is correct and works at least on 3.2 and 3.3.1.

## version 0.3.1

1. Bug fix in srf filtering (num_hits adjusted)

## version 0.3.2

1. Uses sequest peptide_mass_tolerance filter on srf group files by default
now.

## version 0.3.3

1. Worked out minor kinks in prob_precision.rb

## version 0.3.4

1. filters >= +3 charged ions now.

## version 0.3.5

1. fixed creation of background distribution in validators (hash_by base_name,
first_scan, charge now)

## version 0.3.6

1. split off bad_aa_est from bad_aa

## version 0.3.7

1. can deal with No_Enzyme searches now (while still capable of setting
sample_enzyme)

## version 0.3.8

1. can set a decoy to target ratio for decoy validation
2. added mass calculator in Mass::Calculator

## version 0.3.9

1. doesn't clobber mzdata filename in ms_to_lmat.rb conversion

## version 0.3.10

1. added run_percolator.rb script which makes running multiple files easy

## version 0.3.11

1. faster sensing of bad scan tags in mzXML v. 2.0 files
2. implemented lazy evaluation of spectrum in 2 different ways allowing much
larger files to be parsed

## version 0.4.0

1. ** INTERFACE CHANGE: each scan can only have one precursor (used to be an array)
2. ** INTERFACE CHANGE: spectrum mz and intensity data accessed with mzs and intensities
3. lazy eval working on mzData
4. mzData not necessarily guaranteed to have precursor intensities on lazy
eval methos (however, the method intensity_at_mz will still work (causing
evaluation))

## version 0.4.1

1. added support for reading mzXML version 3.0 (may fail in some cases)

## version 0.4.2

1. added MS::MSRun.open method
2. added method to write dta files from SRF

## version 0.4.3

1. added to_mfg_file from SRF
2. added to_dta_files from SRF complete with streaming .tar.gz output (and
supporting .zip output but it has to make tmp files)

## version 0.4.4
1. implemented q-value and pi_0 methods of Storey